# nestor

./: .gitignore  LICENSE  pyproject.toml
nestor/: main.py
nestor/gpt/: chats.py  session.py  typing.py
nestor/prompts/: prompts.py
